--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,11 @@
 {
   "elixir.pathToElixirLS": "~/.elixir-ls/rel/language_server.sh",
-  "emmet.includeLanguages": {"eelixir": "html"}
+  "emmet.includeLanguages": {"eelixir": "html"},
+  "explorer.width": 30,
+  "explorer.icon.enableNerdfont": true,
+  "explorer.keyMappings": {
+    "<cr>": ["expandable?", "expandOrCollapse", "open"],
+    "v": "open-vsplit",
+    "gl": "<C-w>l"
+  }
 }
