--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,6 +3,7 @@
   "emmet.includeLanguages": {"eelixir": "html"},
   "explorer.width": 30,
   "explorer.icon.enableNerdfont": true,
+  "explorer.previewAction.onHover": false,
   "explorer.keyMappings": {
     "<cr>": ["expandable?", "expandOrCollapse", "open"],
     "v": "open-vsplit",
